<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6aJ-MS-Iny">
    <device id="retina6_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Split View Controller-->
        <scene sceneID="9Q9-JP-jfd">
            <objects>
                <splitViewController id="6aJ-MS-Iny" customClass="SplitViewController" customModule="Note_It" customModuleProvider="target" sceneMemberID="viewController">
                    <connections>
                        <segue destination="lpF-aA-QuD" kind="relationship" relationship="masterViewController" id="Yxs-jm-NCb"/>
                        <segue destination="Sh3-Dk-0EO" kind="relationship" relationship="detailViewController" id="RXt-U9-DYr"/>
                    </connections>
                </splitViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VSX-mp-KWT" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1313" y="-202"/>
        </scene>
        <!--Note It-->
        <scene sceneID="YbE-GS-Fcm">
            <objects>
                <tableViewController id="GSL-KV-1bY" customClass="ListController" customModule="Note_It" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="GzI-m1-Whx">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Note" id="NaA-Bt-Hdm">
                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NaA-Bt-Hdm" id="ZGZ-lg-TVz">
                                    <rect key="frame" x="0.0" y="0.0" width="382.66666666666669" height="43.666667938232422"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="Sh3-Dk-0EO" kind="showDetail" identifier="showNote" id="gqR-FK-Xzh"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="GSL-KV-1bY" id="80L-s1-WzY"/>
                            <outlet property="delegate" destination="GSL-KV-1bY" id="Cd6-3y-qiM"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Note It" id="bPm-iu-oc2">
                        <barButtonItem key="leftBarButtonItem" title="New Note" id="xrF-bj-FVR">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="newNoteButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="newNote" destination="GSL-KV-1bY" id="IG0-Bk-Nta"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="ATS-TE-Ieq">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="editButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="editTable" destination="GSL-KV-1bY" id="Jir-hT-KSo"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="notesTableView" destination="GzI-m1-Whx" id="jjt-UA-AJN"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2kg-3h-FzB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3083" y="-468"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="hca-gB-whI">
            <objects>
                <navigationController id="lpF-aA-QuD" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DvF-qe-0Ga">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="GSL-KV-1bY" kind="relationship" relationship="rootViewController" id="uZC-OB-9tP"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aNZ-0C-u9t" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2164" y="-468"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="547-1B-tvp">
            <objects>
                <navigationController id="Sh3-Dk-0EO" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Tqx-gq-rFd">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="uEC-Po-9gU" kind="relationship" relationship="rootViewController" id="Fcl-9P-CJq"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ilH-tT-JdP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2165" y="242"/>
        </scene>
        <!--Note-->
        <scene sceneID="uJr-cl-SvM">
            <objects>
                <viewController id="uEC-Po-9gU" customClass="NoteController" customModule="Note_It" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="YIb-MC-vsS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5At-Ya-TsF">
                                <rect key="frame" x="20" y="108" width="374" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Bur-nt-Qmw"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="noteTitleText"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XWI-ba-1Jy">
                                <rect key="frame" x="10" y="173" width="394" height="669"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="noteTextArea"/>
                                </userDefinedRuntimeAttributes>
                            </textView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="cXi-pr-546" firstAttribute="trailing" secondItem="5At-Ya-TsF" secondAttribute="trailing" constant="20" id="7Yd-kw-ikZ"/>
                            <constraint firstItem="5At-Ya-TsF" firstAttribute="leading" secondItem="cXi-pr-546" secondAttribute="leading" constant="20" id="9I5-AV-ppX"/>
                            <constraint firstItem="cXi-pr-546" firstAttribute="bottom" secondItem="XWI-ba-1Jy" secondAttribute="bottom" constant="20" id="b7w-wk-Lz3"/>
                            <constraint firstItem="cXi-pr-546" firstAttribute="trailing" secondItem="XWI-ba-1Jy" secondAttribute="trailing" constant="10" id="eJM-At-kqq"/>
                            <constraint firstItem="XWI-ba-1Jy" firstAttribute="leading" secondItem="cXi-pr-546" secondAttribute="leading" constant="10" id="isx-Bh-kP1"/>
                            <constraint firstItem="XWI-ba-1Jy" firstAttribute="top" secondItem="5At-Ya-TsF" secondAttribute="bottom" constant="20" id="t3D-6b-dUY"/>
                            <constraint firstItem="5At-Ya-TsF" firstAttribute="top" secondItem="cXi-pr-546" secondAttribute="top" constant="20" id="xqP-1N-zSt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="cXi-pr-546"/>
                    </view>
                    <navigationItem key="navigationItem" title="Note" id="rFf-JT-pqf">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="xAp-vU-gax">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="doneButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="dismissKeybaord:" destination="uEC-Po-9gU" id="n5j-MZ-BSs"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="doneButton" destination="xAp-vU-gax" id="Le7-GT-Swh"/>
                        <outlet property="noteTextView" destination="XWI-ba-1Jy" id="Swm-fy-f7I"/>
                        <outlet property="noteTextViewBottomConstraint" destination="b7w-wk-Lz3" id="4dm-d7-1o9"/>
                        <outlet property="noteTitleTextFeild" destination="5At-Ya-TsF" id="068-5h-itU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oLK-BP-2H9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3083" y="242"/>
        </scene>
    </scenes>
    <inferredMetricsTieBreakers>
        <segue reference="gqR-FK-Xzh"/>
    </inferredMetricsTieBreakers>
</document>
